--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 
 body {
-    background-color: #8a51fc;
+    background-color: 	#6495ED;
 }
 
 .logo {
@@ -58,7 +58,7 @@ select,input{
 }
 
 button{
-    background: #772fd3;
+    background:#6495ED;
     border-radius: 5px;
     width: 100%;
     border: nome;
@@ -77,7 +77,7 @@ button:active{
 }
 
 section{
-    border: 1px solid #772fd3;
+    border: 1px solid #6495ED;
     border-radius: 20px;
     margin-top: 36px;
     padding: 12px;
